# Qwen3.5NaturaVision

./: .gitattributes  .gitignore  README.md  requirements-train.txt
android-app/: README.md  build_vulkan_debug.cmd  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/cpp/: CMakeLists.txt  naturavision_llama.cpp
android-app/app/src/main/cpp/cmake/: SPIRV-HeadersConfig.cmake  windows-host-msvc-toolchain.cmake
data/: species_manifest.csv
data/taxonomy_media/: FUN_01.json  FUN_02.json  FUN_03.json  FUN_04.json  FUN_05.json  FUN_06.json  FUN_07.json  FUN_08.json  FUN_09.json  FUN_10.json  FUN_11.json  FUN_12.json  FUN_13.json  FUN_14.json  FUN_15.json  FUN_16.json  FUN_17.json  FUN_18.json  FUN_19.json  FUN_20.json  PLANT_01.json  PLANT_02.json  PLANT_03.json  PLANT_04.json  PLANT_05.json  PLANT_06.json  PLANT_07.json  PLANT_08.json  PLANT_09.json  PLANT_10.json  PLANT_11.json  PLANT_12.json  PLANT_13.json  PLANT_14.json  (+6 more)
desktop-app/: README.md  run-desktop.ps1
docs/: dokumentacja_etap_1.md  km3_adamczak.md  km4_adamczak.md  km5_adamczak.md  lambda_a100_runbook.md  sprawozdanie_psi_km1_km2.md  wsl_4070_qlora_runbook.md
scripts/: __init__.py  build_inat_subset.py  common.py  download_inat_metadata.ps1  download_taxonomy_media.ps1  evaluate_infer_results.py  fill_taxonomy_media_images_from_dataset.ps1  filter_missing_image_rows.py  make_prompt_ablation_sets.py  make_smoke_subset.py  make_splits.py  merge_qwen35_adapter.py  pack_portable_dataset.py  prepare_qwen_examples.py  render_markdown_pdf.py  rewrite_qwen_image_paths.py  run_qwen35_reference_diagnostics.ps1  test_llama_cuda_desktop.ps1  validate_dataset.py
tests/: test_pipeline.py
train/: bootstrap_lambda.sh  bootstrap_wsl_qlora.sh  export_gguf.sh  run_qwen35_4b_qlora_v2_wsl.sh  run_v2_val_eval_nothink_wsl.sh  train_qwen35_4b_lora.sh  train_qwen35_4b_lora_lambda.sh  train_qwen35_4b_qlora_canary_wsl.sh  train_qwen35_4b_qlora_liger_smoke_wsl.sh  train_qwen35_4b_qlora_smoke_wsl.sh  train_qwen35_4b_qlora_stage2_only_wsl.sh  train_qwen35_4b_qlora_wsl.sh  train_qwen35_4b_smoke_lambda.sh
(+44 files in other folders)
